Add counter functionality

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Document</title>
 </head>
 <body>
+    <h2>Counter:</h2>
+<p id="counter">0</p>
+<button onclick="increaseCounter()">Increase</button>
+<script src="counter.js"></script>
+
     
 </body>
 </html>
