--- a/index.html
+++ b/index.html
@@ -4,17 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-
-
-<title>Counter App</title>
+    <title>Counter App</title>
 </head>
 <body>
- 
-    
+    <h2>Counter:</h2>
+    <p id="counter">0</p>
+    <button onclick="increaseCounter()">Increase</button>
 
-
-
+    <script src="counter.js"></script>
     <script src="test.js"></script>
-
 </body>
 </html>
